--- a/SimTECH/SimTECH/Components/CountryNamedFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryNamedFlag.razor
@@ -1,7 +1,7 @@
 ﻿<MudStack Row="true" Justify="@Justify" AlignItems="AlignItems.Center" Reverse="@Reverse" Class="pa-0">
     <CountryFlag Code="@Code" Size="@Size" Class="@(_countryClasses)" />
     <span class="mx-2"></span>
-    <MudText>@flagNationName</MudText>
+    <MudText Typo="@Typo">@flagNationName</MudText>
 </MudStack>
 
 @code {
@@ -11,6 +11,8 @@
     public FlagSize Size { get; set; } = FlagSize.Normal;
     [Parameter]
     public Justify Justify { get; set; } = Justify.SpaceBetween;
+    [Parameter]
+    public Typo Typo { get; set; } = Typo.body1;
     [Parameter]
     public string Class { get; set; } = string.Empty;
     [Parameter]
