--- a/SimTECH/SimTECH/Pages/Factors/Incidents.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Incidents.razor
@@ -6,21 +6,14 @@
     <MudPaper MinHeight="60px" Width="100%">
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h4">Incidents</MudText>
+            <MudSpacer />
+            <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
         </MudStack>
     </MudPaper>
     <MudDataGrid T="Incident" Items="@IncidentData" Dense="true">
-        <ToolBarContent>
-            <MudChipSet>
-                <MudChip Color="Color.Secondary">Temp</MudChip>
-                <MudChip Color="Color.Secondary">Temp</MudChip>
-                <MudChip Color="Color.Secondary">Temp</MudChip>
-            </MudChipSet>
-            <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
-        </ToolBarContent>
         <Columns>
             <PropertyColumn Property="e => e!.Name" />
-            <PropertyColumn Property="e => e!.Category" />
+            <PropertyColumn Property="e => e!.Category" Filterable="true" />
             <PropertyColumn Property="e => e!.Limit" />
             <PropertyColumn Property="e => e!.Punishment" />
             <PropertyColumn Property="e => e!.Odds" />
