country selectors upgraded, human beings improved. compacter standings.

--- a/SimTECH/SimTECH/Pages/Season/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/PowerRankings.razor
@@ -1,6 +1,6 @@
 ﻿@inject SeasonService SeasonService
 
-<MudContainer>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge">
     @if (DriverRankings != null)
     {
         <MudDataGrid T="PowerRankModel" Items="DriverRankings" Dense="true">
