--- a/SimTECH/SimTECH/Pages/Season/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Standings.razor
@@ -95,7 +95,7 @@
 
         <MudTabPanel Text="WDC results">
             <MudPaper Elevation="15">
-                <MudTable Items="@DriverResultsModel" id="wdc-season-results">
+                <MudTable Items="@DriverResultsModel" Dense="true" Class="extra-dense" id="wdc-season-results">
                     <ToolBarContent>
                         <MudText Typo="Typo.h4">WDC results</MudText>
                         <MudSpacer />
@@ -163,7 +163,7 @@
         </MudTabPanel>
 
         <MudTabPanel Text="WCC results">
-            <MudTable Items="@TeamResultsModel" id="wcc-season-results">
+            <MudTable Items="@TeamResultsModel" Dense="true" id="wcc-season-results">
                 <ToolBarContent>
                     <MudText Typo="Typo.h4">WCC results</MudText>
                     <MudSpacer />
