--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -1,6 +1,7 @@
 ﻿@page "/overview/{SeasonId:long}"
 @page "/overview/{SeasonId:long}/{TabIndex:int}"
 @using SimTECH.Pages.Season.Stats;
+@using SimTECH.Pages.Season.ScoreStandings
 @inject LeagueService _leagueService
 @inject RaceService _raceService
 @inject SeasonService _seasonService
