--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -15,6 +15,7 @@
 @using SimTECH.Extensions
 @using SimTECH.PageModels
 @using SimTECH.PageModels.SeasonModels
+@using SimTECH.PageModels.StandingEntrants
 @using SimTECH.Providers
 @using SimTECH.Shared
 @using System.ComponentModel
