--- a/SimTECH/SimTECH/Components/MudTdResult.razor
+++ b/SimTECH/SimTECH/Components/MudTdResult.razor
@@ -13,8 +13,10 @@
 </MudTd>
 
 @code {
-    [Parameter] public StandingResultCell Result { get; set; }
-    [Parameter] public int LowestScoringPosition { get; set; }
+    [Parameter]
+    public StandingResultCell Result { get; set; }
+    [Parameter]
+    public int LowestScoringPosition { get; set; }
 
     private string _resultDisplay
     {
@@ -45,46 +47,8 @@
     {
         get
         {
-            var cellStyle = "";
+            var cellStyle = Result.GetResultStyle(LowestScoringPosition);
 
-            if (Result.Status == RaceStatus.Dnq)
-            {
-                cellStyle = "background-color:mediumpurple;";
-            }
-            else if (Result.Status == RaceStatus.Dsq)
-            {
-                cellStyle = "background-color:black;color:white !important";
-            }
-            else if (Result.Status == RaceStatus.Dnf)
-            {
-                cellStyle = "background-color:red;";
-            }
-            else if (Result.Status == RaceStatus.Fatal)
-            {
-                cellStyle = "background-color:black;color:white !important";
-            }
-            else
-            {
-                switch (Result.Position)
-                {
-                    case 1:
-                        cellStyle = "background-color:gold;";
-                        break;
-                    case 2:
-                        cellStyle = "background-color:silver;";
-                        break;
-                    case 3:
-                        cellStyle = "background-color:burlywood;";
-                        break;
-                    case int n when n <= LowestScoringPosition:
-                        cellStyle = "background-color:lightgreen;";
-                        break;
-                    default:
-                        cellStyle = "background-color:cornflowerblue";
-                        break;
-                }
-            }
-            // Possibly can return immediatly depending on whether we want to do more with this or not
             return cellStyle;
         }
     }
