Small updates everywhere, shows the amount of overtakes and defending

--- a/SimTECH/SimTECH/Pages/Factors/Tyres.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Tyres.razor
@@ -15,6 +15,7 @@
         </ToolBarContent>
         <Columns>
             <PropertyColumn Property="e => e!.Name" CellStyleFunc="@_applyTyreColouring" />
+            <PropertyColumn Property="e => e!.ForWet" />
             <PropertyColumn Property="e => e!.Pace" CellStyle="font-family: var(--mud-typography-caption-family)" />
             <TemplateColumn T="Tyre" Title="Length" SortBy="e => e.ExpectedLength(advanceDistance)">
                 <CellTemplate>
