--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
@@ -16,6 +16,7 @@
                         Variant="Variant.Outlined"
                         Linear="true"
                         DisableSkipButton="true"
+                        DisablePreviousButton="true"
                         HeaderTextView="HeaderTextView.All"
                         HeaderBadgeView="HeaderBadgeView.GreyOutIncomplete"
                         PreventStepChangeAsync="InvalidStepPrevention">
